--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productivity Dashboards</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css"
+        integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -15,26 +18,51 @@
 
         </nav>
         <section class="allElems">
-            <div class="todo elem" id="1">
+            <div class="todo elem" id="0">
                 <img src="https://i.pinimg.com/736x/98/af/b1/98afb19712c9d1e4d5f15c8780e0cc06.jpg" alt="">
                 <h2>To Do list</h2>
             </div>
-            <div class="daily elem" id="2">
-                <img src="" alt="">
+            <div class="daily elem" id="1">
+                <img src="https://i.pinimg.com/736x/c5/80/d0/c580d0029a8054aab1f864717119d5c5.jpg" alt="">
                 <h2>Daily planner</h2>
             </div>
-            <div class="moti elem" id="3">
-                <img src="" alt="">
+            <div class="moti elem" id="2">
+                <img src="https://i.pinimg.com/1200x/ff/1c/30/ff1c30ce5012b3cb0636c158c9821948.jpg" alt="">
                 <h2>Motivation</h2>
             </div>
-            <div class="pomo elem" id="4">
-                <img src="" alt="">
+            <div class="pomo elem" id="3">
+                <img src="https://i.pinimg.com/736x/e7/23/ba/e723ba9c68d3dcb7e90148c00f1b2b72.jpg" alt="">
                 <h2> Pomodoro Timer</h2>
             </div>
-            <div class="goals elem" id="5">
-                <img src="" alt="">
+            <div class="goals elem" id="4">
+                <img src="https://i.pinimg.com/736x/d1/d2/5d/d1d25d706774f4062ed4e77a8bad2c17.jpg" alt="">
                 <h2> Daily Goals</h2>
             </div>
+        </section>
+
+        <section class="fullElem">
+            <button class="back" id="0">Close</button>
+            <h1>Todo page</h1>
+        </section>
+        <section class="fullElem">
+            <button class="back" id="1">Close</button>
+
+            <h1>Daily Planner</h1>
+        </section>
+        <section class="fullElem">
+            <button class="back" id="2">Close</button>
+
+            <h1>Motivational Qoutes</h1>
+        </section>
+        <section class="fullElem">
+            <button class="back" id="3">Close</button>
+
+            <h1>Pomodoro Timer</h1>
+        </section>
+        <section class="fullElem">
+            <button class="back" id="4">Close</button>
+
+            <h1>daily Goals</h1>
         </section>
     </div>
 
